Fix missing sun.misc.BASE64Decoder/Encoder